@@ -1088,7 +1088,7 @@
 				GCC_PRECOMPILE_PREFIX_HEADER = YES;
 				GCC_PREFIX_HEADER = "$(SYSTEM_LIBRARY_DIR)/Frameworks/AppKit.framework/Headers/AppKit.h";
 				INFOPLIST_FILE = Info.plist;
-				INSTALL_PATH = "/Applications";
+				INSTALL_PATH = /Applications;
 				OTHER_LDFLAGS = (
 					"-framework",
 					Foundation,
@@ -1112,7 +1112,7 @@
 				GCC_PRECOMPILE_PREFIX_HEADER = YES;
 				GCC_PREFIX_HEADER = "$(SYSTEM_LIBRARY_DIR)/Frameworks/AppKit.framework/Headers/AppKit.h";
 				INFOPLIST_FILE = Info.plist;
-				INSTALL_PATH = "/Applications";
+				INSTALL_PATH = /Applications;
 				OTHER_LDFLAGS = (
 					"-framework",
 					Foundation,
@@ -1138,7 +1138,7 @@
 				GCC_PRECOMPILE_PREFIX_HEADER = YES;
 				GCC_PREFIX_HEADER = "$(SYSTEM_LIBRARY_DIR)/Frameworks/AppKit.framework/Headers/AppKit.h";
 				INFOPLIST_FILE = /Users/psychs/svn/limechat/trunk/Info.plist;
-				INSTALL_PATH = "/Applications";
+				INSTALL_PATH = /Applications;
 				OTHER_LDFLAGS = (
 					"-framework",
 					Foundation,
@@ -1162,7 +1162,7 @@
 				GCC_PRECOMPILE_PREFIX_HEADER = YES;
 				GCC_PREFIX_HEADER = "$(SYSTEM_LIBRARY_DIR)/Frameworks/AppKit.framework/Headers/AppKit.h";
 				INFOPLIST_FILE = /Users/psychs/svn/limechat/trunk/Info.plist;
-				INSTALL_PATH = "/Applications";
+				INSTALL_PATH = /Applications;
 				OTHER_LDFLAGS = (
 					"-framework",
 					Foundation,
