@@ -1,3 +1,7 @@
+2008-03-19  Satoshi Nakagawa <artension@gmail.com>
+
+	Changed to handle /whois to get more information.
+
 2008-03-19  Kevin Ballard <kballard@gmail.com>
 
 	Added Rakefile and changed install path to /Applications.
